# simple-file-to-database-producer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
