[project]
name = "simple-file-to-database-producer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "duckdb>=1.2.0",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.38",
]

[dependency-groups]
dev = [
    "ruff>=0.9.7",
]
